src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  scroll-behavior: smooth;
  scroll-padding-top: 6rem;
}

@layer components {
  body {
    @apply bg-[#060417] text-white w-full overflow-x-hidden;
  }

  .navlink {
    @apply text-[0.9rem] text-white relative cursor-pointer; 
  }

  .navlink::before {
    content: '';
    @apply w-[2rem] h-[0.2rem] bg-gradient-to-r from-[#a993fe] to-[#7e61e7] rounded-lg absolute bottom-[-0.6rem] opacity-0 translate-x-[-1.5rem] transition duration-300;
  }

  .navlink:hover::before {
    @apply w-[100%] translate-x-[0] opacity-100;
  }

  .menu-btn {
    @apply w-[2.5rem] h-[2.5rem] text-[1.2rem] flex items-center justify-center border-none rounded-lg text-white cursor-pointer lg:hidden hover:text-[#a993fe] hover:bg-black hover:border hover:border-[#a993fe];
    background: linear-gradient(90deg, #a993fe -0.13%,  #7e61e7 99.87%);
  }

  .menu-btn:hover {
    background: #000;
    transition: 0.3s all ease;
  }

  .mobile-menu {
    @apply w-screen h-screen bg-[rgba(0,0,0,0.3)] fixed left-0 top-0 z-[999] opacity-0;
    box-shadow: 0px 29px 80px rgba(0, 0, 0, 0.3);
    transition: all 0.3s ease;
    transform: translateX(-100vw);
  }

  .active {
    opacity: 1;
    transform: translateX(0);
  }

  .hero-container {
    @apply flex items-center mb-48 relative flex-col lg:flex-row;
  }

  @media screen and (max-width: 640px) {
    .hero-container {
      @apply -mx-3 px-3;
    }
  }

  .hero-container::after, .hero-container::before {
    content: '';
    @apply w-[12rem] h-[12rem] md:w-[18rem] md:h-[18rem] lg:w-[28.125rem] lg:h-[28.125rem] rounded-[28.125rem] bg-[#7c66e3] absolute z-[-1] blur-[225px];
  }

  .hero-container::after {
    @apply top-[-1rem] md:top-0 md:left-0 lg:top-[-3rem] lg:left-[-5rem];
  }

  .hero-container::before {
    @apply md:bottom-[2rem] lg:bottom-[-3rem] right-[0rem]
  }

  .hero-content {
    flex: 1;
  }

  .hero-img > div {
    /*display: flex;
    align-items: flex-end;
    gap: 2rem;*/
    @apply flex items-end gap-[1rem] md:gap-[2rem]; 
  }

  .hero-img > div > img {
    /*width: 25rem;
    transition: all 0.3s ease;*/
    @apply w-[16rem] md:w-[25rem] transition duration-300;
  }

  .tech-icon {
    @apply w-[3.3rem] h-[3.3rem] md:w-[4rem] md:h-[4rem] lg:w-[5rem] lg:h-[5rem] flex items-center justify-center text-center rounded-[0.65rem] border border-[#6852ba];
  }

  .tech-icon img {
    @apply w-[2rem] md:w-[2.5rem] lg:w-[3rem] h-auto transition duration-300;
  }

  .hero-img > div img:hover, .tech-icon img:hover {
    @apply translate-y-[-0.5rem];
  }

  .social-icon {
    @apply grid place-content-center border-2 border-[#7e61e7] rounded-full h-[2.2rem] w-[2.2rem] hover:bg-purple-900 duration-300
  }

  .span:nth-child(1) {
    color: transparent;
    -webkit-text-stroke: 1px #6852ba;
  }

  .services-box {
    @apply bg-[rgba(22,17,47,0.398)] text-[#ffffff99] py-[65px] px-[27px] border border-[#6751b9] rounded-xl max-w-[369px] h-[240px] lg:py-[100px] lg:px-[49px] lg:max-w-[470px] lg:h-[416px] shrink-0 duration-300 hover:bg-[#a993fe80] cursor-pointer lg:hover:scale-[1.012];
  }

  .services-box h2 {
    @apply font-semibold text-white text-[20px] leading-[24.6px] max-w-[156px] lg:max-w-[312px] lg:text-[40px] lg:leading-[49.2px];
  }

  .services-box p {
    @apply font-normal text-[15.52px] leading-[23.5px] mt-4 max-w-[308px] lg:mt-[27px] lg:max-w-[466px] lg:leading-[30px] lg:text-[20px];
  }

  .demo-btn {
    @apply border-none rounded-3xl py-[14px] px-[10px] w-48 outline-none grid place-content-center;
    background: linear-gradient(90deg, #a993fe -0.13%,  #7e61e7 99.87%);
  }

  .demo-btn:hover {
    background: rgba(0, 0, 0, 0.2);
    transition: 0.3s;
    box-shadow: 0 0 5px #a99ef2, 0 0 8.2px #6751b9;
  }

  .skill-card {
    @apply rounded-[0.65rem] border border-[1.5px] border-[#6751b9] p-[2rem] text-center bg-[rgba(22,17,47,0.398)] backdrop-blur-[1rem] relative cursor-pointer duration-300;
  }

  .skill-card:hover, .skill-card.active {
    background: linear-gradient(100deg, #aa94fe 0%, #7c5fe6 100%);
  }

  .skills {
    flex: 1;
    display: grid;
    grid-template-columns: repeat(2, 1fr); 
    @apply pl-[1rem] gap-[3rem] w-full lg:w-auto;
  }

  .skill-img {
    @apply font-extrabold text-4xl text-[#6751b9]
  }

  .skill-info-card {
    @apply min-h-[23rem] rounded-[0.65rem] border border-[#6751b9] bg-[rgba(22,17,47,0.398)] backdrop-blur-[1rem]
  }

  .skill-info-card h5 {
    background: linear-gradient(180deg, #ac96ff 0%, #7c5fe6 100%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    border-bottom: 1.5px solid #6751b9;
  }

  .skill-info p {
    @apply text-[0.9rem] lg:text-[1rem] font-semibold;
  }

  .skill-progress {
    @apply h-[0.5rem] rounded-[0.5rem];
    width: 0%;
    background: linear-gradient(90deg, #aa94fe -50%, #7d60e6 50%);
    transition: all 0.8s ease-in-out;
  }

  .skills-container::after, .skills-container::before {
    content: '';
    @apply w-[18rem] h-[18rem] lg:w-[28rem] lg:h-[28rem] rounded-[28.125rem] bg-[#7c66e3] absolute z-[-1] blur-[200px];
  }

  .skills-container::after {
    top: -3rem;
    left: -5rem;
  }

  .skills-container::before {
    @apply bg-[#9e51b9] bottom-[0rem] right-[0rem];
  }
}

